# site-manager

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docker/: entrypoint.sh
migrations/: 20240101000000_initial.sql  20240102000000_add_public_flag.sql  20240103000000_add_commit_info.sql
src/: auth.rs  caddy.rs  config.rs  db.rs  error.rs  github.rs  github_token.rs  main.rs  sites.rs
web/: app.js  index.html  login.html  new.html  site.html  style.css
