[package]
name = "site-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.19"
hex = "0.4"
hmac = "0.12"
mime_guess = "2"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
time = "0.3"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
jsonwebtoken = "9"
zip = "2"
